04-NetworkPolicies/01-netpol/Pod.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deploy
  namespace: test-ns
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: c1
          image: chaitu1812/netpol-rhel9
          command: ["sleep","2000"]
#---
#apiVersion: v1
#kind: Service
#metadata:
#  name: nginx-service
#  namespace: test-ns
#spec:
#  selector:
#    app: nginx
#  ports:
#    - port: 80
#      targetPort: 80
