04-NetworkPolicies/01-netpol/Network-policy-01.yml
# deny all egress traffic

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all-traffic
  namespace: test-ns
spec:
  podSelector:
    matchLabels:
      app: nginx
  policyTypes:
    - Ingress
  ingress:
    - from:
       - namespaceSelector:
              matchLabels:
                project: dev
#        - podSelector:
#            matchLabels:
#              role: dev-ns
